fixed the collapsed navbar
gave background to navbar dropdown

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -14,6 +14,24 @@
 	font-size: 23px;
 }
 
+
+.navbar-toggle{
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+}
+
+.in{
+  background-color: #f0f0f0;
+  z-index: -5;
+  position: relative;
+}
+
+#myCarousel{
+  z-index: -10;
+  position: relative;
+}
+
 iframe[seamless]{
   border: none;
 }
@@ -59,7 +77,7 @@ height: 4em;
 
 @media (min-width: 775px){
   .navbar-right .dropdown-menu{
-    right: 0;
+    right: 0px;
     left: auto;
   }
 }
